<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pl.petkeeper.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_animal_data"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_calendar"
            app:destination="@id/navigation_calendar" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_filter"
            app:destination="@id/navigation_filter" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="pl.petkeeper.ui.addAnimal.AddAnimalFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_add_animal" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="pl.petkeeper.ui.animalData.AnimalDataFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_animal_data" >
        <action
            android:id="@+id/action_navigation_notifications_self"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="pl.petkeeper.ui.calendar.CalendarFragment"
        android:label="@string/calendar_title"
        tools:layout="@layout/fragment_calendar" >
        <action
            android:id="@+id/action_navigation_calendar_to_navigation_datemark"
            app:destination="@id/navigation_datemark" />
    </fragment>

    <fragment
        android:id="@+id/navigation_datemark"
        android:name="pl.petkeeper.ui.datemark.DatemarkFragment"
        android:label="@string/title_datemark"
        tools:layout="@layout/fragment_datemark" >
        <action
            android:id="@+id/action_navigation_datemark_to_navigation_calendar"
            app:destination="@id/navigation_calendar" />
        <action
            android:id="@+id/action_navigation_datemark_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_filter"
        android:name="pl.petkeeper.ui.filter.FilterFragment"
        android:label="@string/title_filter"
        tools:layout="@layout/fragment_filter" >
        <action
            android:id="@+id/action_navigation_filter_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>